# TwinAnalysis_CppProject_Public

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  DeploymentGuide.md  Interface.md  Need.md  README.md  config.json  launch.vs.json  launch.vs.json.txt
Upload_Result/: tree.txt
docker/: Dockerfile
include/: AI_Adapter.h  IModelBlock.h  ModelParser.h
include/microservice/: ResultUploader.h  ServiceConfig.h
include/packaging/: BindingChecker.h  DetectedModelMetaBuilder.h  JsonHelpers.h  PackagingResultWriter.h  PackagingTypes.h  RequestLoader.h  WrapperGenerator.h
include/utils/: ProcessRunner.h
metajsons/: metadata_2026-02-05T15-18-42.json  metadata_2026-03-02T17-40-19.json  metadata_2026-03-05T14-48-22_add_model.onnx.json  metadata_2026-03-05T14-52-38_resnet50-v2-7.onnx.json  metadata_2026-03-05T16-24-21_tf_model.onnx.json  metadata_2026-03-09T16-35-47_real_model.onnx.json  metadata_2026-03-09T16-37-35_tensor_model.onnx.json  metadata_2026-03-19T17-34-59_affine_from_pytorch.onnx.json  metadata_2026-04-02T23-11-27_string_identity_vec3.onnx.json  metadata_2026-05-09T00-19-26_add_model.onnx.json  metadata_2026-05-13T19-43-20_affine_savemodel.onnx.json  metadata_2026-05-14T17-56-05_affine_savemodel.onnx.json  metadata_2026-05-14T23-14-25_affine_savemodel.onnx.json  metadata_2026-05-15T14-11-17_affine_savemodel.onnx.json  metadata_2026-05-15T14-12-09_affine_savemodel.onnx.json  metadata_2026-05-15T15-05-14_affine_savemodel.onnx.json  metadata_2026-05-15T17-51-24_affine_savemodel.onnx.json  metadata_2026-05-18T18-30-34_affine_savemodel.onnx.json  metadata_2026-05-19T19-25-59_affine_savemodel.onnx.json
models/: affine_savemodel.onnx
models/affine_savemodel/: affine_savemodel.onnx  fingerprint.pb  saved_model.pb
models/affine_savemodel/variables/: variables.data-00000-of-00001  variables.index
offline_release/checksums/: sha256sums.txt
offline_release/docs/: CONFIG.md
offline_release/scripts/: run_offline.sh
requests/: 20260513001.json  2054866287091388416.json  pkg-task-ai-local-pt-anti-jamming-0003.json  request_add_model.json  request_add_model_slice.json  request_add_model_slice_bad.json  request_affine_ts.json  request_ai_pytorch_affine.json  request_ai_string_identity_vec3_std.json  request_pytorch_anti_jamming.json  request_pytorch_test.json  request_stringIdentityVec3.json  request_tensorflow_affine.json  request_tensorflow_affine_savemodel.json  request_tf2onnx_affine_savemodel.json  test-local-001.json
src/: AI_Adapter.cpp  ModelParser.cpp  generated_pytorch_wrapper_test.cpp  generated_wrapper_test.cpp  main.cpp  packaging_cli.cpp
src/microservice/: PackagingService.cpp  ResultUploader.cpp  ResultUploader.h  ServiceConfig.cpp
src/microservice/cpp-httplib/: httplib.h
src/packaging/: BindingChecker.cpp  DetectedModelMetaBuilder.cpp  PackagingResultWriter.cpp  RequestLoader.cpp  WrapperGenerator.cpp
tf_models/: README.md
tools/: create_dummy_models.py
tools/meta_extract/: extract_pytorch_meta.py  extract_tensorflow_meta.py
